--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/mybatis_plus?serverTimezone=GM
 spring.datasource.username=root
 spring.datasource.password=root
 
-#mybatis-plus.global-config.db-config.logic-delete-value=1
-#mybatis-plus.global-config.db-config.logic-not-delete-value=0
+mybatis-plus.global-config.db-config.logic-delete-value=1
+mybatis-plus.global-config.db-config.logic-not-delete-value=0
 
 #ª∑æ≥…Ë÷√£∫dev°¢test°¢prod
 spring.profiles.active=dev
